Fix: restore former scrollbar behavior for overflow lists (https://github.com/jackyzha0/quartz/issues/1437)

--- a/quartz/components/styles/toc.scss
+++ b/quartz/components/styles/toc.scss
@@ -3,10 +3,6 @@
   &.desktop-only {
     max-height: 40%;
   }
-  > #toc-content > .overflow {
-    max-height: unset;
-    overflow-y: unset;
-  }
 }
 
 button#toc {
